# zk-regex0

./: Cargo.toml  README.md
regexes/: regex_example.json
src/: lib.rs  main.rs  regex_circuit.rs  wasm.rs
