[package]
name = "zk-regex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
dev-graph = ["halo2-base/dev-graph"]

[dependencies]
halo2-base = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
    "dev-graph",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
halo2-ecc = { version = "0.2.2", default-features = false, features = [
    "halo2-pse",
    "display",
], git = "https://github.com/axiom-crypto/halo2-lib.git", rev = "9860acc" }
plotters = { version = "0.3.0"}
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
fancy-regex = "0.11.0"
petgraph = "0.6.3"
graph-cycles = "0.1.0"
thiserror = "1.0.40"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
rand = "0.8.5"
itertools = "0.10.3"
clap = { version = "=4.2.1", features = ["derive"] }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
getrandom = { version = "0.2", features = ["js"] }

halo2-regex = { git = "https://github.com/zkemail/halo2-regex.git", version = "0.1.0" }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
home = { version = "=0.5.5" }

[dev-dependencies]
rand = "0.8.5"
itertools = "0.10.3"
snark-verifier = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.1.0", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
snark-verifier-sdk = { git = "https://github.com/zkemail/snark-verifier.git", version = "0.0.1", branch = "main", default-features = false, features = [
    "loader_evm",
    "loader_halo2",
    "halo2-pse",
] }
criterion = { version = "0.3" }

[lib]
name = "zk_regex"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


